Added text for Project 1

--- a/Project-1/MSE5820X_Project-1_Johnson.ipynb
+++ b/Project-1/MSE5820X_Project-1_Johnson.ipynb
@@ -12,14 +12,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "1a6663d9-1344-4fed-a60b-b66580493ee5",
-   "metadata": {},
-   "source": [
-    "## 1 Data Analysis of Gleeble Hardness/Microstructure Data"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 282,
    "id": "f8a33080-ee18-4e52-b296-74f2869f7585",
@@ -39,10 +31,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1a6663d9-1344-4fed-a60b-b66580493ee5",
+   "metadata": {},
+   "source": [
+    "## 1 Data Analysis of Gleeble Hardness/Microstructure Data\n",
+    "The Gleeble is a piece of equipment that uses Joule heating to locally heat a sample to introduce changes in the microstructure due to annealing temperature, cooling rate, etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3faf051a-a052-44f0-9e2d-99380042cc3d",
    "metadata": {},
    "source": [
-    "### 1.1 Hardness Profile with Error Bars"
+    "### 1.1 Hardness Profile with Error Bars\n",
+    "The first graphic uses a profile along the gauge length of the specimen using a number of points. Each row corresponds to hardness tests that are 1 mm away from each other along the gauge length.The cell below defines functions for the statistics of this. The error bars in the graphic are the 95% confidence interval."
    ]
   },
   {
@@ -540,7 +542,8 @@
    "metadata": {},
    "source": [
     "### 1.2 Pearson Correlation Matrix\n",
-    "Analysis of correlation between properties and microstructure"
+    "Analysis of correlation between properties and microstructure. \n",
+    "This is used to understand which microstructural features correlate to other microstructural features as well as the hardness."
    ]
   },
   {
@@ -2045,7 +2048,8 @@
    "id": "c6fa8b7a-c6ed-4f3a-a8ee-6b6ee07bf496",
    "metadata": {},
    "source": [
-    "### 1.3 Subplots of Microstructure/Property Relationships"
+    "### 1.3 Subplots of Microstructure/Property Relationships\n",
+    "Using the Pearson correlation matrix, we can plot a few of the relationships that we have seen. Specifically, the phase fraction, the phase sizes, and the phase boundary perimeter fraction."
    ]
   },
   {
@@ -2130,7 +2134,8 @@
    "id": "3204e258-603a-4cda-b197-c6dbfd8d1444",
    "metadata": {},
    "source": [
-    "## 2 Data Analysis of Porosity in L-DED Sample"
+    "## 2 Data Analysis of Porosity in L-DED Sample\n",
+    "A separate dataset, this data includes information about defects within a laser directed energy deposition build of 2205 duplex stainless steel. The information includes the location, the size, and the shape of the defects."
    ]
   },
   {
@@ -2380,7 +2385,8 @@
    "id": "c35f2955-aca4-4d64-ae31-5923ec68a001",
    "metadata": {},
    "source": [
-    "### 2.1 Location and Size Graphical Representation"
+    "### 2.1 Location and Size Graphical Representation\n",
+    "This graphic shows where the defects occur and how large each defect is as a bubble. The defects are concentrated in lines along the layers of the build."
    ]
   },
   {
@@ -2420,7 +2426,8 @@
    "id": "1b1f5205-2632-4b73-8690-6a0932cbb079",
    "metadata": {},
    "source": [
-    "### 2.2 Defect Size Histogram"
+    "### 2.2 Defect Size Histogram\n",
+    "To see the size distribution of the defects, a histogram of the defect sizes is shown."
    ]
   },
   {
@@ -2454,7 +2461,8 @@
    "id": "ae759fd8-6748-4f29-9038-6f697a4a6031",
    "metadata": {},
    "source": [
-    "### 2.3 Equivalent Diameter vs. Roundness"
+    "### 2.3 Equivalent Diameter vs. Roundness\n",
+    "One way to distinguish between lack of fusion defects (defects between layers due to insufficient energy that lack remelting) and spherical porosity (from gas entrapment or keyhole) can be seen by using the roundness (a measure of the perimeter to the area where 1 is a perfect circle. 0.9 is used as a threshold above which the defect is labeled as spherical porosity."
    ]
   },
   {
